# MiGreedy

./: .gitignore  CITATION.cff  Cargo.toml  Dockerfile  README.md  igreedy  requirements.txt  results.csv
.github/workflows/: docker-image.yml  release.yml
code/: Dockerfile  RIPEAtlas.py  anycast.py  clean_airports.py  disc.py  igreedy.py  measurement.py  test_igreedy.py
code/__pycache__/: igreedy.haversine_numba-25.py39.1.nbc  igreedy.haversine_numba-25.py39.2.nbc  igreedy.haversine_numba-25.py39.nbi
datasets/: airports.csv  auth  list.txt
datasets/ground-truth/: cloudflare-planetlab  edgecast-planetlab  f-planetlab  f-ripe  i-planetlab  i-ripe  k-planetlab  k-ripe  l-planetlab  l-ripe
datasets/measurement+gt/: cloudflare-planetlab  edgecast-planetlab  f-planetlab  f-ripe  i-planetlab  i-ripe  k-planetlab  k-ripe  l-planetlab  l-ripe
datasets/public-available-information/: cloudflare  edgecast
rust_impl/: Cargo.toml  Dockerfile
rust_impl/src/: main.rs
src/: analyzer.rs  atlas.rs  geo.rs  io.rs  main.rs  model.rs
