[package]
name = "migreedy"
version = "1.2.3"
edition = "2024"

[dependencies]
polars = { version = "0.50.0", features = ["lazy", "trigonometry"] } # rust pandas
clap = { version = "4.5.54", features = ["derive"] } # command line parser
rayon = "1.10.0" # parallel processing
indicatif = { version = "0.18.3", features = ["rayon"] } # progress bars
anyhow = "1.0.100" # error handling

[profile.release]
strip = true      # strip binary
opt-level = "z"   # optimize for size
lto = true        # link time optimization
