[package]
name = "migreedy"
version = "1.5.0"
edition = "2024"

[dependencies]
polars = { version = "0.53.0", features = ["lazy", "trigonometry", "performant"] } # rust pandas
clap = { version = "4.6.0", features = ["derive"] } # command line parser
rayon = "1.10.0" # parallel processing
indicatif = { version = "0.18.4", features = ["rayon"] } # progress bars
anyhow = "1.0.102" # error handling
reqwest = { version = "0.13.2", features = ["blocking", "json"] } # HTTP client for RIPE Atlas API
serde = { version = "1.0.228", features = ["derive"] } # JSON deserialization
serde_json = "1.0.149" # JSON parsing
flate2 = "1.1.9" # gzip decompression for embedded datasets

# use high performance allocator when running musl
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[profile.release]
strip = true      # strip binary
opt-level = 3     # optimize for speed
lto = true        # link time optimization
panic = "abort"   # reduce size
